*Empty MediaWiki Message*

--- a/Trieste.mw
+++ b/Trieste.mw
@@ -34,6 +34,8 @@
 '''Trieste''' éte 'nu comune [[Italie|tagliáne]] de 208.621 crestiáne.
 
 [[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Trieste]]
+{{Provinge de Trieste}}
 
 [[af:Triëst]]
 [[ar:ترييستي]]
