--- a/Duino-Aurisina.mw
+++ b/Duino-Aurisina.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Duino-Aurisina''' éte 'nu comune [[Italie|tagliáne]] de 8.767 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Trieste]]
+{{Provinge de Trieste}}
