--- a/Monrupino.mw
+++ b/Monrupino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Monrupino''' éte 'nu comune [[Italie|tagliáne]] de 850 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Trieste]]
+{{Provinge de Trieste}}
