*Empty MediaWiki Message*

--- a/Muggia.mw
+++ b/Muggia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Muggia''' éte 'nu comune [[Italie|tagliáne]] de 13.414 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Trieste]]
+{{Provinge de Trieste}}
