--- a/San_Dorligo_d'a_Valle.mw
+++ b/San_Dorligo_d'a_Valle.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Dorligo della Valle''' éte 'nu comune [[Italie|tagliáne]] de 6.019 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Trieste]]
+{{Provinge de Trieste}}
