*Empty MediaWiki Message*

--- a/Novara.mw
+++ b/Novara.mw
@@ -34,6 +34,8 @@
 '''Novara''' éte 'nu comune [[Italie|tagliáne]] de 102.630 crestiáne.
 
 [[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
 
 [[ar:نوفارا]]
 [[ca:Novara]]
