--- a/Pùgghie.mw
+++ b/Pùgghie.mw
@@ -53,7 +53,7 @@ Image:Regione Apulia 2.svg|Mappa (2)
 |}
 
 === Città maggiore ===
-Li comuni cchiù populose de la Pugghie <ref>Dati [[ISTAT]]: [[31 dicembre]] [[2007]]</ref> songhe:
+Li comuni cchiù populose de la Pugghie <ref>Dati [[ISTAT]]: [[31 decemmre]] [[2007]]</ref> songhe:
 
 <div style="font-size:90%; border:0px; padding:0px; margin-left:1em; margin-right:0px;margin-bottom:0px; text-align:center">
 {| {{prettytable|width=69%}}
@@ -77,8 +77,8 @@ Li comuni cchiù populose de la Pugghie <ref>Dati [[ISTAT]]: [[31 dicembre]] [[2
 | align=center|217
 |-
 | align=center|[[File:Foggia-Stemma.png|35px]]
-| [[Foggia]]
-| align=center|[[Provinge de Foggia]]
+| [[Fogge]]
+| align=center|[[Provinge de Fogge]]
 | align=center|153.469
 | align=center|508
 |-
@@ -101,7 +101,7 @@ Li comuni cchiù populose de la Pugghie <ref>Dati [[ISTAT]]: [[31 dicembre]] [[2
 | align=center|146
 |-
 | align=center|[[File:Brindisi-Stemma.png|35px]]
-| [[Brindisi]]
+| [[Brinnese]]
 | align=center|[[Provinge de Brinnese]]
 | align=center|89.979
 | align=center|328
@@ -204,7 +204,7 @@ Li comuni cchiù populose de la Pugghie <ref>Dati [[ISTAT]]: [[31 dicembre]] [[2
 |-
 | align=center|[[File:Lucera-Stemma.png|35px]]
 | [[Lucera]]
-| align=center|[[Provinge de Foggia]]
+| align=center|[[Provinge de Fogge]]
 | align=center|34.671
 | align=center|338
 |-
