--- a/Pùgghie.mw
+++ b/Pùgghie.mw
@@ -52,8 +52,8 @@ Image:Regione Apulia 2.svg|Mappa (2)
 |}
 |}
 
-=== Città maggiore ===
-Li comuni cchiù populose de la Pugghie <ref>Dati [[ISTAT]]: [[31 decemmre]] [[2007]]</ref> songhe:
+=== Cetate cchiù granne ===
+Le comune cchiù populose d'a Pugghie <ref>Dati [[ISTAT]]: [[31 decemmre]] [[2007]]</ref> sonde:
 
 <div style="font-size:90%; border:0px; padding:0px; margin-left:1em; margin-right:0px;margin-bottom:0px; text-align:center">
 {| {{prettytable|width=69%}}
