*Empty MediaWiki Message*

--- a/Arona.mw
+++ b/Arona.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Arona''' éte 'nu comune [[Italie|tagliáne]] de 14.249 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
