--- a/Barengo.mw
+++ b/Barengo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Barengo''' éte 'nu comune [[Italie|tagliáne]] de 942 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
