--- a/Bellinzago_Novarese.mw
+++ b/Bellinzago_Novarese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bellinzago Novarese''' éte 'nu comune [[Italie|tagliáne]] de 8.804 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
