--- a/Bulgarie.mw
+++ b/Bulgarie.mw
@@ -61,7 +61,7 @@
 
 ==Culture==
 
-==Ati pruggette==
+== Otre pruggette ==
 *[[image:Commons-logo.svg|20px]] '''[[:Commons:Main Page|Wikimedia Commons]]''' tene file multimediale pe la '''[[:commons:Category:Bulgaria|Bulgarie]]'''
 
 {{Europe}}
