--- a/Biandrate.mw
+++ b/Biandrate.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Biandrate''' éte 'nu comune [[Italie|tagliáne]] de 1.103 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
