--- a/Bogogno.mw
+++ b/Bogogno.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bogogno''' éte 'nu comune [[Italie|tagliáne]] de 1251 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
