--- a/Borgo_Ticino.mw
+++ b/Borgo_Ticino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Borgo Ticino''' éte 'nu comune [[Italie|tagliáne]] de 4.350 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
