--- a/Borgomanero.mw
+++ b/Borgomanero.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Borgomanero''' éte 'nu comune [[Italie|tagliáne]] de 20.597 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
