--- a/Briona.mw
+++ b/Briona.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Briona''' éte 'nu comune [[Italie|tagliáne]] de 1.132 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
