--- a/Caltignaga.mw
+++ b/Caltignaga.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Caltignaga''' éte 'nu comune [[Italie|tagliáne]] de 2.345 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
