--- a/Casalbeltrame.mw
+++ b/Casalbeltrame.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Casalbeltrame''' éte 'nu comune [[Italie|tagliáne]] de 832 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
