--- a/Casaleggio_Novara.mw
+++ b/Casaleggio_Novara.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Casaleggio Novara''' éte 'nu comune [[Italie|tagliáne]] de 847 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
