--- a/Casalino.mw
+++ b/Casalino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Casalino''' éte 'nu comune [[Italie|tagliáne]] de 1.456 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
