--- a/Casalvolone.mw
+++ b/Casalvolone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Casalvolone''' éte 'nu comune [[Italie|tagliáne]] de 812 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
