--- a/Castelletto_sopra_Ticino.mw
+++ b/Castelletto_sopra_Ticino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Castelletto sopra Ticino''' éte 'nu comune [[Italie|tagliáne]] de 9.323 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
