--- a/Cavaglietto.mw
+++ b/Cavaglietto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cavaglietto''' éte 'nu comune [[Italie|tagliáne]] de 396 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
