--- a/Cavaglio_d'Agogna.mw
+++ b/Cavaglio_d'Agogna.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cavaglio d'Agogna''' éte 'nu comune [[Italie|tagliáne]] de 1.282 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
