--- a/Comignago.mw
+++ b/Comignago.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Comignago''' éte 'nu comune [[Italie|tagliáne]] de 1.010 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
