--- a/Nome_tarandine.mw
+++ b/Nome_tarandine.mw
@@ -1,4 +1,3 @@
-{{S}}
 Queste jè 'na liste de [[Antroponime|nome proprie de crestiàne]] comune a [[Tarde]].
 
 'Mbrà le parendese quadre se legge 'u nome seconne a diziona [[IPA]].
@@ -66,10 +65,17 @@ Queste jè 'na liste de [[Antroponime|nome proprie de crestiàne]] comune a [[Ta
 *Jangele {{IPA|[I:angələ]}} - Angelo
 *Jennáre {{IPA|[Gənnárə]}} - Gennaro
 
+=== L ===
+*Lebbòrie {{IPA|[Ləbbòriə]}} - Liborio
+*Luìgge {{IPA|[Luìggə]}} - Luigi
+
 === M ===
 *Manuè {{IPA|[Manuè]}} - Emanuele
 *Memíne {{IPA|[Məmínə]}} - Cosimino
 *Mengùcce {{IPA|[Məngùccə]}} - Domenicuccio (dim. di Domenico)
+
+=== N ===
+*Nàrde {{IPA|[Nàrdə]}} - Leonardo (diminutivo)
 
 === P ===
 *Pèppe {{IPA|[Pèppə]}} - Peppe
