/* Nome de femmene */ ipa su agatina

--- a/Nome_tarandine.mw
+++ b/Nome_tarandine.mw
@@ -95,7 +95,7 @@ Queste jè 'na liste de [[Antroponime|nome proprie de crestiàne]] comune a [[Ta
 === A ===
 *Adéle {{IPA|[Adélə]}} - Adele / Adelaide
 *Agata {{IPA|[Agata]}} - Agata
-*Agatìne - Agatina
+*Agatìne {{IPA|[Agatìnə]}} - Agatina
 *Alberte {{IPA|[Albertə]}} - Alberta
 *Alessàndre {{IPA|[Alessàndrə]}} - Alessandra
 *Amèlie {{IPA|[Amèliə]}} - Amelia
