/* Libbre */ aggiunto libro

--- a/Giancarlo_De_Cataldo.mw
+++ b/Giancarlo_De_Cataldo.mw
@@ -21,6 +21,7 @@ Jndr'à giugne 2007 ha assut 'u libbre nueve [[Nelle mani giuste|Jndr'à le mane
 * ''[[Romanzo criminale]]''. Torino, Einaudi (Stilelibero), 2002. ISBN 9788806160968.
 * ''[[Nelle mani giuste]]''. Torino, Einaudi (Stilelibero), 2007.
 * ''Fuoco!''. Milano, Edizioni Ambiente (collana ''VerdeNero''), 2007. ISBN 9788889014561.
+* '' L'india, l'elefante e me''. Rizzoli (24/7), 2008. ISBN 9788817025874
 
 == Tiatre ==
 * ''Acido fenico. Ballata per Mimmo Carunchio camorrista''. 2001
