--- a/Cressa.mw
+++ b/Cressa.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cressa''' éte 'nu comune [[Italie|tagliáne]] de 1.431 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
