*Empty MediaWiki Message*

--- a/Pagene_Prengepále.mw
+++ b/Pagene_Prengepále.mw
@@ -39,7 +39,7 @@ Se non conosci il Tarantino leggi le [[Wikipedia:Vocabolario di tarantino|conven
 |-
 | [[Image:Cozza.png|50px|Tecnologgije e scienze applecáte]]
 | '''[[:Category:Tecnologgije e scienze applecáte|Tecnologgije e scienze applecáte]]'''<br/>
-[[:Category:Agriculture|Agriculture]] &middot; [[:Category:Comunecazziúne|Comunecazziúne]] &middot; [[:Category:Elettrònehce|Elettròneche]] &middot; [['Ndustrie]] &middot; [[:Category:'Mbormàteche|'Mbormàteche]] &middot; [[:Category:'Ngegnërije|'Ngegnërije]] &middot; [[:Category:Medecine|Medecine]] &middot; [[:Category:Tecnologgije|Tecnologgije]] &middot; [[:Category:Carrêscie|Carrêscie]] &middot; [[:Category:Matemateche|Matemateche]]
+[[:Category:Agriculture|Agriculture]] &middot; [[:Category:Comunecazziúne|Comunecazziúne]] &middot; [[:Category:Elettrònehce|Elettròneche]] &middot; [[:Category:'Ndustrie|'Ndustrie]] &middot; [[:Category:'Mbormàteche|'Mbormàteche]] &middot; [[:Category:'Ngegnërije|'Ngegnërije]] &middot; [[:Category:Medecine|Medecine]] &middot; [[:Category:Tecnologgije|Tecnologgije]] &middot; [[:Category:Carrêscie|Carrêscie]] &middot; [[:Category:Matemateche|Matemateche]]
 <!---------------------------------------------------------------->
 | width=1%| [[Image:Cozza.png|50px|Indice]]
 | width=48%| '''[[:Categoria:Argumiende|Indice]]'''<br/>
