*Empty MediaWiki Message*

--- a/Pagene_Prengepále.mw
+++ b/Pagene_Prengepále.mw
@@ -35,7 +35,7 @@ Se non conosci il Tarantino leggi le [[Wikipedia:Vocabolario di tarantino|conven
 <!---------------------------------------------------------------->
 | [[Image:Cozza.png|50px|'Nrattíene e sciuggetáte]]
 | style="border-bottom: 1px dashed #AAAAAA;" | '''[[:Category:Sciuggetáte|'Nrattíene e sciuggetáte]]'''<br/>
-[[Bricolage]] &middot; [[:Category:Collezziunisme|Collezziunisme]] &middot; [[:Category:Cucine|Cucine]] &middot; [[:Category:Sciardenagge|Sciardenagge]] &middot; [[:Category:Sciuèche|Sciuèche]] &middot; [[:Category:Sciurnalisme|Sciurnalisme]] &middot; [[:Category:'Nrattíene|'Nrattíene]] &middot; [[:Category:'Ndernètte|'Ndernètte]] &middot; [[:Category:Media|Media]] &middot; [[:Category:Spettacule|Spettacule]] &middot; [[:Category:Sport|Sport]] &middot; [[:Category:Televisione|Televisione]] &middot; [[:Category:Turisme|Turisme]] &middot; [[:Category:Vidëosciuèche|Vidëosciuèche]]
+[[:Category:Bricolage|Bricolage]] &middot; [[:Category:Collezziunisme|Collezziunisme]] &middot; [[:Category:Cucine|Cucine]] &middot; [[:Category:Sciardenagge|Sciardenagge]] &middot; [[:Category:Sciuèche|Sciuèche]] &middot; [[:Category:Sciurnalisme|Sciurnalisme]] &middot; [[:Category:'Nrattíene|'Nrattíene]] &middot; [[:Category:'Ndernètte|'Ndernètte]] &middot; [[:Category:Media|Media]] &middot; [[:Category:Spettacule|Spettacule]] &middot; [[:Category:Sport|Sport]] &middot; [[:Category:Televisione|Televisione]] &middot; [[:Category:Turisme|Turisme]] &middot; [[:Category:Vidëosciuèche|Vidëosciuèche]]
 |-
 | [[Image:Cozza.png|50px|Tecnologgije e scienze applecáte]]
 | '''[[:Category:Tecnologgije e scienze applecáte|Tecnologgije e scienze applecáte]]'''<br/>
