*Empty MediaWiki Message*

--- a/Pagene_Prengepále.mw
+++ b/Pagene_Prengepále.mw
@@ -43,7 +43,7 @@ Se non conosci il Tarantino leggi le [[Wikipedia:Vocabolario di tarantino|conven
 <!---------------------------------------------------------------->
 | width=1%| [[Image:Cozza.png|50px|Indice]]
 | width=48%| '''[[:Categoria:Argumiende|Indice]]'''<br/>
-[[Speciale:Allpages/|Alfabbèteche]] &middot; [[Wikipedia:Indice vôce|Alternative (Aa - Zz)]] &middot; [[:Category:Biografije|Biografije]] &middot; [[Wikipedia:Purtále|Purtále]] &middot; [[Wikipedia:WikiProject|Pruggiette temàteche]] &middot; [[:Category:Ajute|Pàggene d'ajute]] &middot; [[Wikipedia:Vetrine|Vôce 'nvetrine]] &middot; [[Speciale:Categories|Categurije]]
+[[Speciale:Allpages/|Alfabbèteche]] &middot; [[Wikipedia:Indice vôce|Alternative (Aa - Zz)]] &middot; [[:Category:Biografije|Biografije]] &middot; [[Wikipedia:Purtále|Purtále]] &middot; [[Wikipedia:WikiProject|Pruggiette temàteche]] &middot; [[:Category:Ajute|Pàggene d'ajute]] &middot; [[Wikipedia:Vetrine|Vôce 'nvetrine]] &middot; [[Special:Categories|Categorije]]
 |}
 
 ----
