--- a/Augusta_(SR).mw
+++ b/Augusta_(SR).mw
@@ -13,7 +13,7 @@
 [[es:Augusta (Italia)]]
 [[fr:Augusta (Italie)]]
 [[hu:Augusta (Olaszország)]]
-[[it:Augusta (SR)]]
+[[it:Augusta (Italia)]]
 [[ja:アウグスタ (イタリア)]]
 [[la:Augusta]]
 [[nap:Augusta (SR)]]
