*Empty MediaWiki Message*

--- a/Pagene_Prengepále.mw
+++ b/Pagene_Prengepále.mw
@@ -42,8 +42,8 @@ Se non conosci il Tarantino leggi le [[Wikipedia:Vocabolario di tarantino|conven
 [[:Category:Agriculture|Agriculture]] &middot; [[:Category:Comunecazziúne|Comunecazziúne]] &middot; [[:Category:Elettrònehce|Elettròneche]] &middot; [[:Category:'Ndustrie|'Ndustrie]] &middot; [[:Category:'Mbormàteche|'Mbormàteche]] &middot; [[:Category:'Ngegnërije|'Ngegnërije]] &middot; [[:Category:Medecine|Medecine]] &middot; [[:Category:Tecnologgije|Tecnologgije]] &middot; [[:Category:Carrêscie|Carrêscie]] &middot; [[:Category:Matemateche|Matemateche]]
 <!---------------------------------------------------------------->
 | width=1%| [[Image:Cozza.png|50px|Indice]]
-| width=48%| '''[[:Categoria:Argumiende|Indice]]'''<br/>
-[[Speciale:Allpages/|Alfabbèteche]] &middot; [[Wikipedia:Indice vôce|Alternative (Aa - Zz)]] &middot; [[:Category:Biografije|Biografije]] &middot; [[Wikipedia:Purtále|Purtále]] &middot; [[Wikipedia:WikiProject|Pruggiette temàteche]] &middot; [[:Category:Ajute|Pàggene d'ajute]] &middot; [[Wikipedia:Vetrine|Vôce 'nvetrine]] &middot; [[Special:Categories|Categorije]]
+| width=48%| '''[[:Category:Argumiende|Indice]]'''<br/>
+[[Special:Allpages/|Alfabbèteche]] &middot; [[Wikipedia:Indice vôce|Alternative (Aa - Zz)]] &middot; [[:Category:Biografije|Biografije]] &middot; [[Wikipedia:Purtále|Purtále]] &middot; [[Wikipedia:WikiProject|Pruggiette temàteche]] &middot; [[:Category:Ajute|Pàggene d'ajute]] &middot; [[Wikipedia:Vetrine|Vôce 'nvetrine]] &middot; [[Special:Categories|Categorije]]
 |}
 
 ----
