--- a/Pagene_Prengepále.mw
+++ b/Pagene_Prengepále.mw
@@ -5,7 +5,7 @@
 <big>'''[[Wikipedia:Eventi recenti|Caféje]]''' &middot; '''[http://wikimediafoundation.org/wiki/Donazioni Dunazziune]'''</big></center>
 
 <div style="margin-top: 1em; padding-bottom: 1em; font-family: Verdana, Arial, Helvetica, sans-serif; font-weight: normal; border-bottom: 1px #aaaaaa solid;">
-Stame a ccréje 'na [['ngeclopedije]] [[GNU Free Documentation License|lìbbere]] e [[meta:List of Wikipedias|mmultelènghe]] addò cingate pô scrìvere. 'U pruggètte 'nlènga tarandíne ha ppegghiáte 'u vije ìnd'a primavére 2006 e tténe mo' '''[[Special:Statistics|{{NUMBEROFARTICLES}}]]''' [[Help:Vôsce|vôsce]], cu 'a particularetáte de tenè' 'nu [[GNU Free Documentation License|cundenúte lìbbere]] e 'nu punde de viste neutrále. Ligge 'a [[Aiuto:Guida essenziale|Guida tèrra-tèrre]] o ffà do' assàgge jndr'â [[Wikipedia:Prove|Sandbox]]; tramìnde 'u [[Portale:Comunità|Purtale cumunetáte]] nuèstre pe' vvedè' tutte le dettagghie suse [[Help:roa-tara.wiki|tara.wiki]].
+Stè ccréjame 'na [['ngeclopedije]] [[GNU Free Documentation License|lìbbere]] e [[meta:List of Wikipedias|mmultelènghe]] addò cingate pô scrìvere. 'U pruggètte 'nlènga tarandíne ha ppegghiáte 'u vije ìnd'a primavére 2006 e tténe mo' '''[[Special:Statistics|{{NUMBEROFARTICLES}}]]''' [[Help:Vôsce|vôsce]], cu 'a particularetáte de tenè' 'nu [[GNU Free Documentation License|cundenúte lìbbere]] e 'nu punde de viste neutrále. Ligge 'a [[Aiuto:Guida essenziale|Guida tèrra-tèrre]] o ffà do' assàgge jndr'â [[Wikipedia:Prove|Sandbox]]; tramìnde 'u [[Portale:Comunità|Purtale cumunetáte]] nuèstre pe' vvedè' tutte le dettagghie suse [[Help:roa-tara.wiki|tara.wiki]].
 ----
 <div style="clear:both;margin:0 3px .8em 3px">
 Se non conosci il Tarantino leggi le [[Wikipedia:Vocabolario di tarantino|convenzioni di scrittura]] adottate.
