*Empty MediaWiki Message*

--- a/Pagene_Prengepále.mw
+++ b/Pagene_Prengepále.mw
@@ -1,4 +1,5 @@
 <!------ Attenzione questo template andrebbe modificato soltanto dopo discussione ------>
+__NOTOC__ __NOEDITSECTION__
 <center><span style="font-size: 166%;">
 <big>'''[[Help:Bovègne|Bovègne]] jndr'â [[Uicchipèdie]], 'a 'ngeclopedije lìbbere!'''</big>
 </span>
@@ -14,57 +15,28 @@ Se non conosci il Tarantino leggi le [[Wikipedia:Vocabolario di tarantino|conven
 {{finestra|col1=1160A5|col2=F0F8FF|sfondo=sfondo_bagliore.png|titolo=Battaglia Vinta|contenuto='''Uicchipedie in Tarandine non g'achiude!|leggi=Wikipedia:Wiki in tarantino non chiude|font-size=12}}
 ----
 
-<div style="clear:both;margin:0 3px .8em 3px">
-<p style="font-variant: small-caps; text-align: center; margin-top: 0; margin-bottom:.2em; font-size: 105%;"><!-- These should be fundamental categories --> 
-[[:Category:Culture|Culture]] | [[:Category:Sciugrafije|Sciugrafije]] | [[:Category:Storie|Storie]] | [[:Category:Releggione|Releggione]] | [[:Category:Sciènze|Sciènze]] | [[:Category:Sciuggetáte|Sciuggetáte]] | [[:Category:Tecnologgije|Tecnologgije]] </p>
-</div>
-----
-{| width=100% style="font-family: Verdana, Arial, Helvetica, sans-serif; font-size: x-small;"
-| width=1%| [[Image:Cozza.png|50px|Scienze matemateche, fiseche e nnaturále]]
-| width=46% style="border-bottom: 1px dashed #AAAAAA;" | '''[[:Category:Scienze matemateche, fiseche e nnaturále|Scienze matemateche, fiseche e nnaturále]]'''<br/>
-[[:Category:Astronomije|Astronomije]] &middot; [[:Category:Biologije|Biologije]] &middot; [[:Category:Chìmeche|Chìmeche]] &middot; [[:Category:Fìseche|Fìseche]] &middot; [[:Category:Sciumetrije|Sciumetrije]] &middot; [[:Category:Lògeche|Lògeche]] &middot; [[:Category:Matemateche|Matemateche]] &middot; [[:Category:Scienze naturále|Scienze naturále]] &middot; [[:Category:Scienze d'a Tèrre|Scienze d'a Tèrre]] &middot; [[:Category:Statìsteche|Statìsteche]]
-<!---------------------------------------------------------------->
-| width=1%| [[Image:Cozza.png|50px|Arte, letterature, lènghe, mùseche]]
-| width=48% style="border-bottom: 1px dashed #AAAAAA;" | '''[[:Category:Arte|Arte]]''', '''[[:Category:Letterature|letterature]]''', '''[[:Category:Linguìsteche|lènghe]]''', '''[[:Category:Mùseche|mùseche]]'''<br/> 
-[[:Category:Architetture|Architetture]] &middot; [[:Category:Arte|Arte]] &middot; [[:Category:Cìneme|Cìneme]] &middot; [[:Category:Danze|Danze]] &middot; [[:Category:Design|Design]] &middot; [[:Category:Futografije|Futografije]] &middot; [[:Category:Fumiette|Fumètte]] &middot; [[:Category:Letterature|Letterature]] &middot; [[:Category:Linguìsteche|Linguìsteche]] &middot; [[:Category:Mùseche|Mùseche]]  &middot; [[:Category:Petture|Petture]] &middot; [[:Category:Sculture|Sculture]] &middot; [[:Category:Tiatre|Tiatre]] 
-|-
-| [[Image:Cozza.png|50px|Scienze sciuggiále, storie, sciugrafije, releggione]]
-| style="border-bottom: 1px dashed #AAAAAA;" | '''[[:Category:Scienze sciuggiále|Scienze sciuggiále]]''', '''[[:Category:Storie|storie]]''', '''[[:Category:Sciugrafije|sciugrafije]]''', '''[[:Category:Releggione|releggione]]'''<br/>
-[[:Category:Andropoluggije|Andropoluggije]] &middot; [[:Category:Archëologgije|Archëologgije]] &middot; [[:Category:Jusse|Jusse]] &middot; [[:Category:Economije|Economije]] &middot; [[:Category:Educazione|Educazione]]  &middot; [[:Category:Finanza|Finanza]] &middot; [[:Category:Felosofije|Felosofije]] &middot; [[:Category:Sciugrafije|Sciugrafije]] &middot; [[:Category:Metologgije|Metologgije]] &middot; [[:Category:Polìteche|Polìteche]] &middot; [[:Category:Psicologgije|Psicologgije]] &middot; 
-[[:Category:Releggione|Releggione]] &middot; [[:Category:Sciuggiologgije|Sciuggiologgije]] &middot; [[:Category:Storie|Storie]]
-<!---------------------------------------------------------------->
-| [[Image:Cozza.png|50px|'Nrattíene e sciuggetáte]]
-| style="border-bottom: 1px dashed #AAAAAA;" | '''[[:Category:Sciuggetáte|'Nrattíene e sciuggetáte]]'''<br/>
-[[:Category:Bricolage|Bricolage]] &middot; [[:Category:Collezziunisme|Collezziunisme]] &middot; [[:Category:Cucine|Cucine]] &middot; [[:Category:Sciardenagge|Sciardenagge]] &middot; [[:Category:Sciuèche|Sciuèche]] &middot; [[:Category:Sciurnalisme|Sciurnalisme]] &middot; [[:Category:'Nrattíene|'Nrattíene]] &middot; [[:Category:'Ndernètte|'Ndernètte]] &middot; [[:Category:Media|Media]] &middot; [[:Category:Spettacule|Spettacule]] &middot; [[:Category:Sport|Sport]] &middot; [[:Category:Televisione|Televisione]] &middot; [[:Category:Turisme|Turisme]] &middot; [[:Category:Vidëosciuèche|Vidëosciuèche]]
-|-
-| [[Image:Cozza.png|50px|Tecnologgije e scienze applecáte]]
-| '''[[:Category:Tecnologgije e scienze applecáte|Tecnologgije e scienze applecáte]]'''<br/>
-[[:Category:Agriculture|Agriculture]] &middot; [[:Category:Comunecazziúne|Comunecazziúne]] &middot; [[:Category:Elettrònehce|Elettròneche]] &middot; [[:Category:'Ndustrie|'Ndustrie]] &middot; [[:Category:'Mbormàteche|'Mbormàteche]] &middot; [[:Category:'Ngegnërije|'Ngegnërije]] &middot; [[:Category:Medecine|Medecine]] &middot; [[:Category:Tecnologgije|Tecnologgije]] &middot; [[:Category:Carrêscie|Carrêscie]] &middot; [[:Category:Matemateche|Matemateche]]
-<!---------------------------------------------------------------->
-| width=1%| [[Image:Cozza.png|50px|Indice]]
-| width=48%| '''[[:Category:Argumiende|Indice]]'''<br/>
-[[Special:Allpages/|Alfabbèteche]] &middot; [[Wikipedia:Indice vôce|Alternative (Aa - Zz)]] &middot; [[:Category:Biografije|Biografije]] &middot; [[Wikipedia:Purtále|Purtále]] &middot; [[Wikipedia:WikiProject|Pruggiette temàteche]] &middot; [[:Category:Ajute|Pàggene d'ajute]] &middot; [[Wikipedia:Vetrine|Vôce 'nvetrine]] &middot; [[Special:Categories|Categorije]]
-|}
+<div style="float:left; clear:left; width:59%">
+{{FinestraVert
+|titolo=Convenzioni d'u Tarandìne
+|padding=0|contenuto={{Convenzioni d'u Tarandìne}}
+}}</div>
 
-----
+<div style="float:right; clear:right; width:40%">
+{{FinestraVert
+|titolo=Sommarie
+|padding=0|contenuto={{Elenco Categorie Principali}}
+}}</div>
 
-<div class="toccolours" style="text-align:center;margin-bottom:1em">
-'''[[:it:Wikipedia:Progetto Wikifratellanza|Pruggètte Wikifratellanza]] – Spannite 'a vôsce!'''<br />
-Uicchipèdie de: [[:co:|Corsu]] · [[:eml:|Emigliàn e Rumagnòl]] · [[:fur:|Furlan]] · [[:la:|Latine]] · [[:lij:|Ligure]] · [[:lmo:|Lumbaart]] · [[:nap:|Nnapulitano]] · [[:pms:|Piemontèis]] · [[:rm:|Rumantsch]] · [[:sc:|Sardu]] · [[:scn:|Sicilianu]] · [[:vec:|Veneto]] · '''[[:it:Wikipedia:Progetto Wikifratellanza|Tarantino]]'''
+<div style="float:left; clear:left; width:59%">
+{{FinestraVert
+|titolo=Prùggette Wikifratellanza
+|padding=0|contenuto={{Wikifratellanza}}
+}}</div>
 
-'''Uicchipèdie jndr'à 'u munne!'''<br />
-
-Uicchipèdie cu cchiù de 100.000 artichele:
-[[:cs:|Česká (Czech)]] · [[:de:|Deutsch (Allemand)]] · [[:en:|English (Anglais)]] · [[:es:|Español (Espagnol)]] · [[:fr:|Français]] · [[:it:|Italiano (Italien)]] · [[:ja:|日本語 (Japonais)]] · [[:nl:|Nederlands (Néelandais)]] · [[:pl:|Polski (Polonais)]] · [[:pt:|Português (Portugais)]] · [[:sv:|Svenska (Suédois)]] 
-
-Uicchipèdie cu cchiù de 10.000 artichele:
-[[:bg:|Български (Bulgare)]] · [[:ca:|Català (Catalan)]] · [[:da:|Dansk (Danois)]] · [[:et:|Eesti (Estonien)]] ·  [[:eo:|Esperanto (espéranto)]] · [[:fi:|Suomi (Finnois)]] · [[:he:|עברית (Hebreu)]] · [[:hu:|Magyar (Hongrois)]] · [[:id:|Bahasa Indonesia (Indonésien)]] · [[:ko:|한국어 (Koréen)]] · [[:no:|Norsk bokmål (Norvégien)]] · [[:nn:|Norsk nynorsk (Norvégien)]] · [[:ro:|Română (Roumain)]] · [[:ru:|Русский (Russe)]] · [[:sk:|Slovenčina (Slovaque)]] · [[:sl:|Slovenščina (Slovène)]] · [[:sr:|Српски (Serbe)]] · [[:tr:|Türkçe (Turque)]] · [[:uk:|Українська (Ukraine)]] · [[:zh:|中文 (Chinois)]]
-
-Uicchipèdie cu cchiù de 1.000 artichele:
-<small>
-[[:af:|Afrikaans]] · [[:ar:|العربية (Arabe)]] · [[:ast:|Asturianu (Asturien)]] · [[:zh-min-nan:|Bân-lâm-gú (Min Nan)]] · [[:be:|Беларуская (Bélarusse)]] · [[:bs:|Bosanski (Bosnien)]] · [[:cy:|Cymraeg (Gallois)]] · [[:el:|Ελληνικά (Grec)]] · [[:eu:|Euskara (Basque)]] · [[:fa:|فارسی (Perse)]] · [[:fy:|Frysk (Frison)]] · [[:ga:|Gaeilge (Irlandais)]] · [[:gd:|Gàidhlig (Ecossais)]] · [[:gl:|Galego (Galicien)]] · [[:hi:|हिन्दी (Hindi)]] · [[:hr:|Hrvatski (Croate)]] · [[:ia:|Interlingua]] · [[:io:|Ido]] · [[:is:|Íslenska (Islandais)]] · [[:jv:|Basa Jawa (Javane)]] · [[:ka:|ქართული (Georgien)]] · [[:ku:|Kurdî / كوردی (Kurde)]] · [[:la:|Latina (Latin)]] ·  [[:lb:|Lëtzebuergesch (Luxembourgois)]] ·  [[:lt:|Lietuvių (Lithuanien)]] · [[:li:|Limburgs (Limbuorgois)]] · [[:lv:|Latviešu (Lettonien)]] · [[:mk:|Македонски (Macédonien)]] · [[:mr:|मराठी (Marathi)]] · [[:ms:|Bahasa Melayu (Malaï)]] · [[:nds:|Plattdüütsch (Saxon Bas)]] · [[:os:|Ирон (Ossete)]] · [[:scn:|Sicilianu (Sicilien)]] · [[:simple:|Simple English]] · [[:sq:|Shqip (Albane)]] ·  [[:ta:| தமிழ் (Tamil)]] · [[:tl:|Tagalog]] · [[:th:|ภาษาไทย (Thaï)]] · [[:tt:|Tatarça (Tatar)]] · [[:te:|తెలుగు (Telugu)]] · [[:vi:|Tiếng Việt (Vietnamien)]] · [[:wa:|Walon (Wallon)]]</small>
-
-Pe vedè tutte le Uicchipèdie d'u munne: [[Wikipedia:Tutte le lingue|cazze aqquà]]
-</div>
+<div style="float:left; clear:left; width:59%">
+{{FinestraVert
+|titolo=Uicchipèdie d'u Munne
+|padding=0|contenuto={{Uicchi d'u Munne}}
+}}</div>
 
 [[ar:]] [[bg:]] [[bs:]] [[ca:]] [[cs:]] [[da:]] [[de:]] [[el:]] [[en:]] [[eo:]] [[es:]] [[et:]] [[eu:]] [[fa:]] [[fi:]] [[fr:]] [[gl:]] [[he:]] [[hr:]] [[hu:]] [[id:]] [[io:]] [[is:]] [[it:]] [[ja:]] [[ka:]] [[ko:]] [[lb:]] [[lt:]] [[ms:]] [[nap:]] [[nl:]] [[nn:]] [[no:]] [[pl:]] [[pt:]] [[rmy:]] [[ro:]][[ru:]] [[simple:]] [[sk:]] [[sl:]] [[sr:]] [[sv:]] [[th:]] [[tr:]] [[uk:]] [[vi:]] [[zh:]]
