--- a/Fontaneto_d'Agogna.mw
+++ b/Fontaneto_d'Agogna.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Fontaneto d'Agogna''' éte 'nu comune [[Italie|tagliáne]] de 2.549 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
