*Empty MediaWiki Message*

--- a/Galliate_(NO).mw
+++ b/Galliate_(NO).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Galliate (NO)''' éte 'nu comune [[Italie|tagliáne]] de 14.624 crestiáne.
-[[Category:Gëografije]]
+'''Galliate''' éte 'nu comune [[Italie|tagliáne]] de 14.624 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
