--- a/Garbagna_Novarese.mw
+++ b/Garbagna_Novarese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Garbagna Novarese''' éte 'nu comune [[Italie|tagliáne]] de 963 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
