--- a/Gargallo.mw
+++ b/Gargallo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gargallo''' éte 'nu comune [[Italie|tagliáne]] de 1.673 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
