*Empty MediaWiki Message*

--- a/Real_Statte.mw
+++ b/Real_Statte.mw
@@ -8,12 +8,12 @@ Jndr'à st'anne 'u '''Real Statte''' ha ottenute 'nu sbuenne de resultete 'mbort
 
 Sciucatrice cchiù rappresendative d'a squadre jè '''Mina D'Ippolito''' ma pure l'otre non ge scherzane.
 
-== Osce a die ==
-'U Real Statte, se stè scioche 'u scudette, d'u cambionate nazionale de calce a 5 femminile, pe mò, ha vingiute 'u girone de qualificazione e ha trasute jndr'à ''final eight'' pu scudette.
+== Staggione 2008/2009 ==
+'U Real Sttae, ha vingiute 'a supercoppa tàgliane, 'a Coppa Itaglie e 'u scudette battenne in finale, a le calce de regore, 'a Virtus Rome.
 
 == Palmares ==
 == A levèlle Nazionale ==
-* 2 Cambionate tagliàne FIGC
+* 3 Cambionate tagliàne FIGC
 * 1 Coppe Itaglie FIGC
 * 3 Supercoppe Itaglie FIGC
 
