Bot: Modifico: [[lt:Romano Prodi]]

--- a/Romano_Prodi.mw
+++ b/Romano_Prodi.mw
@@ -43,7 +43,7 @@
 [[ko:로마노 프로디]]
 [[la:Romanus Prodi]]
 [[lb:Romano Prodi]]
-[[lt:Romanas Prodis]]
+[[lt:Romano Prodi]]
 [[mk:Романо Проди]]
 [[mr:रोमानो प्रोदी]]
 [[ms:Romano Prodi]]
