--- a/Gattico.mw
+++ b/Gattico.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gattico''' éte 'nu comune [[Italie|tagliáne]] de 3.134 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
