--- a/Ghemme.mw
+++ b/Ghemme.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ghemme''' éte 'nu comune [[Italie|tagliáne]] de 3.722 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
