--- a/Gozzano.mw
+++ b/Gozzano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gozzano''' éte 'nu comune [[Italie|tagliáne]] de 5.949 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
