--- a/Granozzo_con_Monticello.mw
+++ b/Granozzo_con_Monticello.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Granozzo con Monticello''' éte 'nu comune [[Italie|tagliáne]] de 1.216 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
