*Empty MediaWiki Message*

--- a/Grignasco.mw
+++ b/Grignasco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Grignasco''' éte 'nu comune [[Italie|tagliáne]] de 4.704 (aggiornati al 2001) crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
