--- a/Invorio.mw
+++ b/Invorio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Invorio''' éte 'nu comune [[Italie|tagliáne]] de 3.761 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
