--- a/Landiona.mw
+++ b/Landiona.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Landiona''' éte 'nu comune [[Italie|tagliáne]] de 587 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
