--- a/Lesa.mw
+++ b/Lesa.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Lesa''' éte 'nu comune [[Italie|tagliáne]] de 2.402 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
