*Empty MediaWiki Message*

--- a/Mandello_Vitta.mw
+++ b/Mandello_Vitta.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mandello Vitta''' éte 'nu comune [[Italie|tagliáne]] de 261 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
 
 [[de:Mandello Vitta]]
 [[en:Mandello Vitta]]
