*Empty MediaWiki Message*

--- a/Marano_Ticino.mw
+++ b/Marano_Ticino.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Marano Ticino''' éte 'nu comune [[Italie|tagliáne]] de 1.407 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
 
 [[de:Marano Ticino]]
 [[en:Marano Ticino]]
