*Empty MediaWiki Message*

--- a/Massino_Visconti.mw
+++ b/Massino_Visconti.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Massino Visconti''' éte 'nu comune [[Italie|tagliáne]] de 1.088 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
 
 [[de:Massino Visconti]]
 [[en:Massino Visconti]]
