--- a/Meina.mw
+++ b/Meina.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Meina''' éte 'nu comune [[Italie|tagliáne]] de 2.439 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
 
 [[de:Meina]]
 [[en:Meina]]
