--- a/Miasino.mw
+++ b/Miasino.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Miasino''' éte 'nu comune [[Italie|tagliáne]] de 953 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
 
 [[de:Miasino]]
 [[en:Miasino]]
