*Empty MediaWiki Message*

--- a/Momo_(NO).mw
+++ b/Momo_(NO).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Momo (NO)''' éte 'nu comune [[Italie|tagliáne]] de 2.724 crestiáne.
-[[Category:Gëografije]]
+'''Momo''' éte 'nu comune [[Italie|tagliáne]] de 2.724 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
