--- a/Nebbiuno.mw
+++ b/Nebbiuno.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Nebbiuno''' éte 'nu comune [[Italie|tagliáne]] de 1.542 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
