*Empty MediaWiki Message*

--- a/Nibbiola.mw
+++ b/Nibbiola.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Nibbiola''' éte 'nu comune [[Italie|tagliáne]] de 720 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
