--- a/Oleggio_Castello.mw
+++ b/Oleggio_Castello.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Oleggio Castello''' éte 'nu comune [[Italie|tagliáne]] de 1.729 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
