*Empty MediaWiki Message*

--- a/Oleggio_(NO).mw
+++ b/Oleggio_(NO).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Oleggio (NO)''' éte 'nu comune [[Italie|tagliáne]] de 12.734 crestiáne.
-[[Category:Gëografije]]
+'''Oleggio''' éte 'nu comune [[Italie|tagliáne]] de 12.734 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
