--- a/Orta_San_Giulio.mw
+++ b/Orta_San_Giulio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Orta San Giulio''' éte 'nu comune [[Italie|tagliáne]] de 1.116 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
