--- a/Paruzzaro.mw
+++ b/Paruzzaro.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Paruzzaro''' éte 'nu comune [[Italie|tagliáne]] de 1.587 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
