--- a/Pettenasco.mw
+++ b/Pettenasco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pettenasco''' éte 'nu comune [[Italie|tagliáne]] de 1.310 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
