*Empty MediaWiki Message*

--- a/Pisano_(NO).mw
+++ b/Pisano_(NO).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Pisano (NO)''' éte 'nu comune [[Italie|tagliáne]] de 770 crestiáne.
-[[Category:Gëografije]]
+'''Pisano''' éte 'nu comune [[Italie|tagliáne]] de 770 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
