--- a/Prato_Sesia.mw
+++ b/Prato_Sesia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Prato Sesia''' éte 'nu comune [[Italie|tagliáne]] de 1.936 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
