*Empty MediaWiki Message*

--- a/Recetto.mw
+++ b/Recetto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Recetto''' éte 'nu comune [[Italie|tagliáne]] de 897 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
