--- a/Romagnano_Sesia.mw
+++ b/Romagnano_Sesia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Romagnano Sesia''' éte 'nu comune [[Italie|tagliáne]] de 4.213 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
