--- a/Romentino.mw
+++ b/Romentino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Romentino''' éte 'nu comune [[Italie|tagliáne]] de 4.436 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
