--- a/San_Maurizio_d'Opaglio.mw
+++ b/San_Maurizio_d'Opaglio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Maurizio d'Opaglio''' éte 'nu comune [[Italie|tagliáne]] de 3.066 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
