--- a/San_Pietro_Mosezzo.mw
+++ b/San_Pietro_Mosezzo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Pietro Mosezzo''' éte 'nu comune [[Italie|tagliáne]] de 1.737 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
