--- a/Sizzano.mw
+++ b/Sizzano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sizzano''' éte 'nu comune [[Italie|tagliáne]] de 1.458 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
