--- a/Sozzago.mw
+++ b/Sozzago.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sozzago''' éte 'nu comune [[Italie|tagliáne]] de 859 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
