--- a/Tornaco.mw
+++ b/Tornaco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tornaco''' éte 'nu comune [[Italie|tagliáne]] de 878 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Novara]]
+{{Provinge de Novara}}
