*Empty MediaWiki Message*

--- a/Cuneo.mw
+++ b/Cuneo.mw
@@ -33,6 +33,8 @@
 '''Cuneo''' éte 'nu comune [[Italie|tagliáne]] de 54.817 (dati ISTAT)  crestiáne.
 
 [[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
 
 [[ar:كونيو]]
 [[ca:Cuneo]]
