--- a/Acceglio.mw
+++ b/Acceglio.mw
@@ -3,6 +3,7 @@
 
 [[Category:Comune d'u Piemonte]]
 [[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
 
 [[ca:Acceglio]]
 [[de:Acceglio]]
