--- a/Albaretto_della_Torre.mw
+++ b/Albaretto_della_Torre.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Albaretto della Torre''' éte 'nu comune [[Italie|tagliáne]] de 254 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
