--- a/Argentera.mw
+++ b/Argentera.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Argentera''' éte 'nu comune [[Italie|tagliáne]] de 101 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
 
 [[ca:Argentera (Cuneo)]]
 [[de:Argentera]]
