--- a/Bagnolo_Piemonte.mw
+++ b/Bagnolo_Piemonte.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bagnolo Piemonte''' éte 'nu comune [[Italie|tagliáne]] de 5.193 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
