--- a/Baldissero_d'Alba.mw
+++ b/Baldissero_d'Alba.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Baldissero d'Alba''' éte 'nu comune [[Italie|tagliáne]] de 1.084 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
