--- a/Bastia_Mondovì.mw
+++ b/Bastia_Mondovì.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bastia Mondovì''' éte 'nu comune [[Italie|tagliáne]] de 624 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
