--- a/Beinette.mw
+++ b/Beinette.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Beinette''' éte 'nu comune [[Italie|tagliáne]] de 2.719 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
