--- a/Belvedere_Langhe.mw
+++ b/Belvedere_Langhe.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Belvedere Langhe''' éte 'nu comune [[Italie|tagliáne]] de 395 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
