--- a/Bene_Vagienna.mw
+++ b/Bene_Vagienna.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bene Vagienna''' éte 'nu comune [[Italie|tagliáne]] de 3.294 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
