--- a/Bernezzo.mw
+++ b/Bernezzo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bernezzo''' éte 'nu comune [[Italie|tagliáne]] de 3.009 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
