--- a/Borgo_San_Dalmazzo.mw
+++ b/Borgo_San_Dalmazzo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Borgo San Dalmazzo''' éte 'nu comune [[Italie|tagliáne]] de 11.256 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
