--- a/Alìce.mw
+++ b/Alìce.mw
@@ -76,6 +76,7 @@ L'alìce salate se ponnè ausà pe cucinà a pasta cu le rape.
 [[he:עפיאן אירופי]]
 [[hr:Inćun]]
 [[it:Engraulis encrasicolus]]
+[[kk:Қамза]]
 [[la:Engraulis encrasicolus]]
 [[lt:Europinis ančiuvis]]
 [[nl:Ansjovis]]
