--- a/ISO_3166-2:GB.mw
+++ b/ISO_3166-2:GB.mw
@@ -4,7 +4,7 @@
 
 Le codece corresponnène a le [[Suddivisiune d'u Regne Aunìte|divisiune amministrative d'u Regne Aunìte]]:
 *[[Inghilterre]]
-** 34 [[Condee de l'Inghilterra|condee]] cu le [[consuglie de condea]] (tutte le [[condee shire|condee shire]] scartanne [[Berkshire]])
+** 34 [[Condee de l'Inghilterra|condee]] cu le [[consiglie de condea]] (tutte le [[condee, shire|condee]] scartanne [[Berkshire]])
 ** 32 [[Riune de Londra]]
 ** 36 [[Riune Metropolitane]]
 ** 47 [[Autorità Aunitarie|autorità aunitarie]] ('ngludenne l'[[Isole de Scilly]])
@@ -949,7 +949,7 @@ L' [[Isole de Channel]] e l'[[Isole de Man]] non ge sonde parte d'u Regne Aunite
 ! [[Liverpool]] (Merseyside district)
 | <code>GB-LIV</code>
 |-
-! [[City of London|London, City of]] (city corporation)
+! [[Cetate de Londra|Londra, Cetate de]] (corporazzione cetadine)
 | <code>GB-LND</code>
 |-
 ! [[Luton]] (autorità aunìtarie)
