--- a/Bra.mw
+++ b/Bra.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bra''' éte 'nu comune [[Italie|tagliáne]] de 28.819 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
