--- a/Briaglia.mw
+++ b/Briaglia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Briaglia''' éte 'nu comune [[Italie|tagliáne]] de 288 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
