--- a/Briga_Alta.mw
+++ b/Briga_Alta.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Briga Alta''' éte 'nu comune [[Italie|tagliáne]] de 62 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
