--- a/Brondello.mw
+++ b/Brondello.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Brondello''' éte 'nu comune [[Italie|tagliáne]] de 348 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
