*Empty MediaWiki Message*

--- a/Brossasco.mw
+++ b/Brossasco.mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Brossasco''' éte 'nu comune [[Italie|tagliáne]] de 1.108 (dati aggiornati al 2006. Fonte: [[La Strada]]) crestiáne.
-[[Category:Gëografije]]
+'''Brossasco''' éte 'nu comune [[Italie|tagliáne]] de 1.108 (date aggiurnate a 'u [[2006]]. Fonte: [[La Strada]]) crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
