--- a/Busca.mw
+++ b/Busca.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Busca''' éte 'nu comune [[Italie|tagliáne]] de 9.727 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
