--- a/Camo.mw
+++ b/Camo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Camo''' éte 'nu comune [[Italie|tagliáne]] de 238 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
