--- a/Canosio.mw
+++ b/Canosio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Canosio''' éte 'nu comune [[Italie|tagliáne]] de 92 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
