--- a/Cardé.mw
+++ b/Cardé.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cardè''' éte 'nu comune [[Italie|tagliáne]] de 1.094 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
