--- a/Carrù.mw
+++ b/Carrù.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Carrù''' éte 'nu comune [[Italie|tagliáne]] de 4.007 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
