--- a/Cartignano.mw
+++ b/Cartignano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cartignano''' éte 'nu comune [[Italie|tagliáne]] de 170 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
