--- a/Casalgrasso.mw
+++ b/Casalgrasso.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Casalgrasso''' éte 'nu comune [[Italie|tagliáne]] de 1.368 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
