--- a/Castagnito.mw
+++ b/Castagnito.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Castagnito''' éte 'nu comune [[Italie|tagliáne]] de 1.728 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
