--- a/Castelletto_Stura.mw
+++ b/Castelletto_Stura.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Castelletto Stura''' éte 'nu comune [[Italie|tagliáne]] de 1.176 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
