--- a/Castelletto_Uzzone.mw
+++ b/Castelletto_Uzzone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Castelletto Uzzone''' éte 'nu comune [[Italie|tagliáne]] de 374 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
