--- a/Castellinaldo.mw
+++ b/Castellinaldo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Castellinaldo''' éte 'nu comune [[Italie|tagliáne]] de 858 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
