--- a/Castelmagno.mw
+++ b/Castelmagno.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Castelmagno''' éte 'nu comune [[Italie|tagliáne]] de 117 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
