--- a/Castiglione_Tinella.mw
+++ b/Castiglione_Tinella.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Castiglione Tinella''' éte 'nu comune [[Italie|tagliáne]] de 877 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
