--- a/Cavallermaggiore.mw
+++ b/Cavallermaggiore.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cavallermaggiore''' éte 'nu comune [[Italie|tagliáne]] de 5.160 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
