--- a/Cerreto_Langhe.mw
+++ b/Cerreto_Langhe.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cerreto Langhe''' éte 'nu comune [[Italie|tagliáne]] de 469 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
