--- a/Ceva.mw
+++ b/Ceva.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ceva''' éte 'nu comune [[Italie|tagliáne]] de 5.795 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
