--- a/Chiusa_di_Pesio.mw
+++ b/Chiusa_di_Pesio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Chiusa di Pesio''' éte 'nu comune [[Italie|tagliáne]] de 3.698 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
