--- a/Cissone.mw
+++ b/Cissone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cissone''' éte 'nu comune [[Italie|tagliáne]] de 100 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
