--- a/Cossano_Belbo.mw
+++ b/Cossano_Belbo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cossano Belbo''' éte 'nu comune [[Italie|tagliáne]] de 1.071 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
