--- a/Costigliole_Saluzzo.mw
+++ b/Costigliole_Saluzzo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Costigliole Saluzzo''' éte 'nu comune [[Italie|tagliáne]] de 3.122 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
