--- a/Cravanzana.mw
+++ b/Cravanzana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cravanzana''' éte 'nu comune [[Italie|tagliáne]] de 400 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
