--- a/Crissolo.mw
+++ b/Crissolo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Crissolo''' éte 'nu comune [[Italie|tagliáne]] de 210 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
