--- a/Demonte.mw
+++ b/Demonte.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Demonte''' éte 'nu comune [[Italie|tagliáne]] de 2.039 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
