--- a/Diano_d'Alba.mw
+++ b/Diano_d'Alba.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Diano d'Alba''' éte 'nu comune [[Italie|tagliáne]] de 2.981 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
