--- a/Dogliani.mw
+++ b/Dogliani.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Dogliani''' éte 'nu comune [[Italie|tagliáne]] de 4.556 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
