--- a/Dronero.mw
+++ b/Dronero.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Dronero''' éte 'nu comune [[Italie|tagliáne]] de 7.142 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
