--- a/Entracque.mw
+++ b/Entracque.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Entracque''' éte 'nu comune [[Italie|tagliáne]] de 851 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
