--- a/Envie.mw
+++ b/Envie.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Envie''' éte 'nu comune [[Italie|tagliáne]] de 1.887 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
