--- a/Frabosa_Soprana.mw
+++ b/Frabosa_Soprana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Frabosa Soprana''' éte 'nu comune [[Italie|tagliáne]] de 875 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
