--- a/Frabosa_Sottana.mw
+++ b/Frabosa_Sottana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Frabosa Sottana''' éte 'nu comune [[Italie|tagliáne]] de 1.388 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
