--- a/Frassino_(CN).mw
+++ b/Frassino_(CN).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Frassino (CN)''' éte 'nu comune [[Italie|tagliáne]] de 324 crestiáne.
-[[Category:Gëografije]]
+'''Frassino''' éte 'nu comune [[Italie|tagliáne]] de 324 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
