*Empty MediaWiki Message*

--- a/Gambasca.mw
+++ b/Gambasca.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gambasca''' éte 'nu comune [[Italie|tagliáne]] de 346 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
