--- a/Garessio.mw
+++ b/Garessio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Garessio''' éte 'nu comune [[Italie|tagliáne]] de 3.498 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
