*Empty MediaWiki Message*

--- a/Genola.mw
+++ b/Genola.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Genola''' éte 'nu comune [[Italie|tagliáne]] de 2.317 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
