--- a/Gottasecca.mw
+++ b/Gottasecca.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gottasecca''' éte 'nu comune [[Italie|tagliáne]] de 188 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
