--- a/Govone.mw
+++ b/Govone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Govone''' éte 'nu comune [[Italie|tagliáne]] de 1.923 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
