--- a/Grinzane_Cavour.mw
+++ b/Grinzane_Cavour.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Grinzane Cavour''' éte 'nu comune [[Italie|tagliáne]] de 1.804 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
