--- a/Guarene.mw
+++ b/Guarene.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Guarene''' éte 'nu comune [[Italie|tagliáne]] de 3.015 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
