--- a/La_Morra.mw
+++ b/La_Morra.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''La Morra''' éte 'nu comune [[Italie|tagliáne]] de 2.608 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
