--- a/Lagnasco.mw
+++ b/Lagnasco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Lagnasco''' éte 'nu comune [[Italie|tagliáne]] de 1.290 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
