--- a/Lequio_Berria.mw
+++ b/Lequio_Berria.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Lequio Berria''' éte 'nu comune [[Italie|tagliáne]] de 523 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
