--- a/Lequio_Tanaro.mw
+++ b/Lequio_Tanaro.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Lequio Tanaro''' éte 'nu comune [[Italie|tagliáne]] de 683 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
