--- a/Lisio.mw
+++ b/Lisio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Lisio''' éte 'nu comune [[Italie|tagliáne]] de 247 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
