--- a/Marene.mw
+++ b/Marene.mw
@@ -1,7 +1,9 @@
 {{S}}
 '''Marene''' éte 'nu comune [[Italie|tagliáne]] de 2.702 crestiáne.
 
-[[Category:Gëografije]]
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
 
 [[de:Marene]]
 [[en:Marene]]
