*Empty MediaWiki Message*

--- a/Margarita_(CN).mw
+++ b/Margarita_(CN).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Margarita (CN)''' éte 'nu comune [[Italie|tagliáne]] de 1.378 crestiáne.
-[[Category:Gëografije]]
+'''Margarita''' éte 'nu comune [[Italie|tagliáne]] de 1.378 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
