--- a/Marmora.mw
+++ b/Marmora.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Marmora''' éte 'nu comune [[Italie|tagliáne]] de 99 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
