--- a/Marsaglia.mw
+++ b/Marsaglia.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Marsaglia''' éte 'nu comune [[Italie|tagliáne]] de 316 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
 
 [[de:Marsaglia]]
 [[en:Marsaglia]]
