--- a/Martiniana_Po.mw
+++ b/Martiniana_Po.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Martiniana Po''' éte 'nu comune [[Italie|tagliáne]] de 666 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
 
 [[ca:Martiniana Po]]
 [[de:Martiniana Po]]
