*Empty MediaWiki Message*

--- a/Melle.mw
+++ b/Melle.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Melle''' éte 'nu comune [[Italie|tagliáne]] de 364 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
