--- a/Moiola.mw
+++ b/Moiola.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Moiola''' éte 'nu comune [[Italie|tagliáne]] de 295 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
 
 [[ca:Moiola]]
 [[de:Moiola]]
