*Empty MediaWiki Message*

--- a/Mombarcaro.mw
+++ b/Mombarcaro.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mombarcaro''' éte 'nu comune [[Italie|tagliáne]] de 320 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
 
 [[de:Mombarcaro]]
 [[en:Mombarcaro]]
