--- a/Mombasiglio.mw
+++ b/Mombasiglio.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mombasiglio''' éte 'nu comune [[Italie|tagliáne]] de 630 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
 
 [[de:Mombasiglio]]
 [[en:Mombasiglio]]
