--- a/Monastero_di_Vasco.mw
+++ b/Monastero_di_Vasco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Monastero di Vasco''' éte 'nu comune [[Italie|tagliáne]] de 1.199 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
