--- a/Monasterolo_Casotto.mw
+++ b/Monasterolo_Casotto.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Monasterolo Casotto''' éte 'nu comune [[Italie|tagliáne]] de 126 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
 
 [[de:Monasterolo Casotto]]
 [[en:Monasterolo Casotto]]
