*Empty MediaWiki Message*

--- a/Monasterolo_di_Savigliano.mw
+++ b/Monasterolo_di_Savigliano.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Monasterolo di Savigliano''' éte 'nu comune [[Italie|tagliáne]] de 1.171 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
 
 [[de:Monasterolo di Savigliano]]
 [[en:Monasterolo di Savigliano]]
