--- a/Monchiero.mw
+++ b/Monchiero.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Monchiero''' éte 'nu comune [[Italie|tagliáne]] de 517 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
 
 [[de:Monchiero]]
 [[en:Monchiero]]
