--- a/Mondovì.mw
+++ b/Mondovì.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mondovì''' éte 'nu comune [[Italie|tagliáne]] de 22.047 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
 
 [[bg:Мондови]]
 [[ca:Mondovì]]
