--- a/Monesiglio.mw
+++ b/Monesiglio.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Monesiglio''' éte 'nu comune [[Italie|tagliáne]] de 752 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
 
 [[de:Monesiglio]]
 [[en:Monesiglio]]
