--- a/Monforte_d'Alba.mw
+++ b/Monforte_d'Alba.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Monforte d'Alba''' éte 'nu comune [[Italie|tagliáne]] de 1.917 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
 
 [[de:Monforte d’Alba]]
 [[en:Monforte d'Alba]]
