--- a/Montaldo_di_Mondovì.mw
+++ b/Montaldo_di_Mondovì.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Montaldo di Mondovì''' éte 'nu comune [[Italie|tagliáne]] de 592 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
