--- a/Montanera.mw
+++ b/Montanera.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Montanera''' éte 'nu comune [[Italie|tagliáne]] de 729 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
