--- a/Montelupo_Albese.mw
+++ b/Montelupo_Albese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Montelupo Albese''' éte 'nu comune [[Italie|tagliáne]] de 459 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
