--- a/Montemale_di_Cuneo.mw
+++ b/Montemale_di_Cuneo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Montemale di Cuneo''' éte 'nu comune [[Italie|tagliáne]] de 221 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
