--- a/Monterosso_Grana.mw
+++ b/Monterosso_Grana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Monterosso Grana''' éte 'nu comune [[Italie|tagliáne]] de 569 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
