--- a/Monteu_Roero.mw
+++ b/Monteu_Roero.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Monteu Roero''' éte 'nu comune [[Italie|tagliáne]] de 1.603 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
