--- a/Montà.mw
+++ b/Montà.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Montà''' éte 'nu comune [[Italie|tagliáne]] de 4.292 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
