*Empty MediaWiki Message*

--- a/Moretta.mw
+++ b/Moretta.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Moretta''' éte 'nu comune [[Italie|tagliáne]] de 4.020 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
