--- a/Murello.mw
+++ b/Murello.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Murello''' éte 'nu comune [[Italie|tagliáne]] de 899 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
