--- a/Narzole.mw
+++ b/Narzole.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Narzole''' éte 'nu comune [[Italie|tagliáne]] de 3.301 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
