--- a/Neviglie.mw
+++ b/Neviglie.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Neviglie''' éte 'nu comune [[Italie|tagliáne]] de 419 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
