--- a/Niella_Belbo.mw
+++ b/Niella_Belbo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Niella Belbo''' éte 'nu comune [[Italie|tagliáne]] de 420 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
