*Empty MediaWiki Message*

--- a/Nucetto.mw
+++ b/Nucetto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Nucetto''' éte 'nu comune [[Italie|tagliáne]] de 455 (anno 2003) crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
