--- a/Oncino.mw
+++ b/Oncino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Oncino''' éte 'nu comune [[Italie|tagliáne]] de 102 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
