--- a/Ormea.mw
+++ b/Ormea.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ormea''' éte 'nu comune [[Italie|tagliáne]] de 1.966 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
