--- a/Ostana.mw
+++ b/Ostana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ostana''' éte 'nu comune [[Italie|tagliáne]] de 79 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
