--- a/Pezzolo_Valle_Uzzone.mw
+++ b/Pezzolo_Valle_Uzzone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pezzolo Valle Uzzone''' éte 'nu comune [[Italie|tagliáne]] de 370 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
