--- a/Piasco.mw
+++ b/Piasco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Piasco''' éte 'nu comune [[Italie|tagliáne]] de 2.801 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
