--- a/Pietraporzio.mw
+++ b/Pietraporzio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pietraporzio''' éte 'nu comune [[Italie|tagliáne]] de 115 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
