--- a/Piozzo.mw
+++ b/Piozzo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Piozzo''' éte 'nu comune [[Italie|tagliáne]] de 996 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
