--- a/Priocca.mw
+++ b/Priocca.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Priocca''' éte 'nu comune [[Italie|tagliáne]] de 1.956 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
