--- a/Prunetto.mw
+++ b/Prunetto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Prunetto''' éte 'nu comune [[Italie|tagliáne]] de 492 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
