--- a/Racconigi.mw
+++ b/Racconigi.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Racconigi''' éte 'nu comune [[Italie|tagliáne]] de 9.886 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
