--- a/Revello.mw
+++ b/Revello.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Revello''' éte 'nu comune [[Italie|tagliáne]] de 4.198 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
