--- a/Roascio.mw
+++ b/Roascio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Roascio''' éte 'nu comune [[Italie|tagliáne]] de 85 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
