--- a/Robilante.mw
+++ b/Robilante.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Robilante''' éte 'nu comune [[Italie|tagliáne]] de 2.315 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
