--- a/Roccabruna.mw
+++ b/Roccabruna.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Roccabruna''' éte 'nu comune [[Italie|tagliáne]] de 1.482  crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
