*Empty MediaWiki Message*

--- a/Santo_Stefano_Roero.mw
+++ b/Santo_Stefano_Roero.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Santo Stefano Roero''' éte 'nu comune [[Italie|tagliáne]] de 1.234 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
