*Empty MediaWiki Message*

--- a/Trinità_(CN).mw
+++ b/Trinità_(CN).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Trinità (CN)''' éte 'nu comune [[Italie|tagliáne]] de 1.983 crestiáne.
-[[Category:Gëografije]]
+'''Trinità''' éte 'nu comune [[Italie|tagliáne]] de 1.983 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
