*Empty MediaWiki Message*

--- a/Vercelli.mw
+++ b/Vercelli.mw
@@ -9,6 +9,8 @@
 '''Vercelli''' ète nu comune de 44.500 crisitane.
 
 [[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
 
 [[ar:فرشيلي]]
 [[ca:Vercelli]]
