*Empty MediaWiki Message*

--- a/Arborio.mw
+++ b/Arborio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Arborio''' éte 'nu comune [[Italie|tagliáne]] de 1.033 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
