*Empty MediaWiki Message*

--- a/Breia.mw
+++ b/Breia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Breia''' éte 'nu comune [[Italie|tagliáne]] de 191 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
