*Empty MediaWiki Message*

--- a/Fontanetto_Po.mw
+++ b/Fontanetto_Po.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Fontanetto Po''' éte 'nu comune [[Italie|tagliáne]] de 1.233 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
