*Empty MediaWiki Message*

--- a/Greggio_(VC).mw
+++ b/Greggio_(VC).mw
@@ -30,5 +30,8 @@
 |sito =  <!-- http://www.comune.bovezzo.bs.it/ -->
 }}
 
-'''Greggio (VC)''' éte 'nu comune [[Italie|tagliáne]] de 375 crestiáne.
-[[Category:Gëografije]]
+'''Greggio''' éte 'nu comune [[Itaglie|tagliáne]] de 375 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
