*Empty MediaWiki Message*

--- a/Moncrivello.mw
+++ b/Moncrivello.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Moncrivello''' éte 'nu comune [[Italie|tagliáne]] de 1.476 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
 
 [[de:Moncrivello]]
 [[en:Moncrivello]]
