*Empty MediaWiki Message*

--- a/Pila_(VC).mw
+++ b/Pila_(VC).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Pila (VC)''' éte 'nu comune [[Italie|tagliáne]] de 114 crestiáne.
-[[Category:Gëografije]]
+'''Pila''' éte 'nu comune [[Italie|tagliáne]] de 114 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
