*Empty MediaWiki Message*

--- a/Quinto_Vercellese.mw
+++ b/Quinto_Vercellese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Quinto Vercellese''' éte 'nu comune [[Italie|tagliáne]] de 418 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
