*Empty MediaWiki Message*

--- a/Rossa_(VC).mw
+++ b/Rossa_(VC).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Rossa (VC)''' éte 'nu comune [[Italie|tagliáne]] de 185 crestiáne.
-[[Category:Gëografije]]
+'''Rossa''' éte 'nu comune [[Italie|tagliáne]] de 185 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
