*Empty MediaWiki Message*

--- a/Sabbia_(VC).mw
+++ b/Sabbia_(VC).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Sabbia (VC)''' éte 'nu comune [[Italie|tagliáne]] de 93 crestiáne.
-[[Category:Gëografije]]
+'''Sabbia''' éte 'nu comune [[Italie|tagliáne]] de 93 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
