*Empty MediaWiki Message*

--- a/Scopa_(VC).mw
+++ b/Scopa_(VC).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Scopa (VC)''' éte 'nu comune [[Italie|tagliáne]] de 371 crestiáne.
-[[Category:Gëografije]]
+'''Scopa''' éte 'nu comune [[Italie|tagliáne]] de 371 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
