*Empty MediaWiki Message*

--- a/Torino.mw
+++ b/Torino.mw
@@ -33,6 +33,8 @@
 '''Torino''' éte 'nu comune [[Italie|tagliáne]] de 900.569  crestiáne.
 
 [[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[af:Turyn]]
 [[ar:تورينو]]
