*Empty MediaWiki Message*

--- a/Torino.mw
+++ b/Torino.mw
@@ -3,7 +3,9 @@
 {{Comune
 |nomeComune = Torino
 |portale= Torino
+|linkBandiera = Torino-Bandiera.png
 |linkStemma = Torino-Stemma.png
+|panorama = Torino-panoramadaicappuccini.jpg
 |siglaRegione = PMN
 |siglaProvincia = TO
 |latitudineGradi = 45
