*Empty MediaWiki Message*

--- a/Airasca.mw
+++ b/Airasca.mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Airasca''' éte 'nu comune [[Italie|tagliáne]] de 3.656 <!-- dati riferiti al 31/12/2004 --> crestiáne.
-[[Category:Gëografije]]
+'''Airasca''' éte 'nu comune [[Italie|tagliáne]] de 3.656 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
