*Empty MediaWiki Message*

--- a/Airasca.mw
+++ b/Airasca.mw
@@ -1,5 +1,36 @@
 {{S}}
-'''Airasca''' éte 'nu comune [[Italie|tagliáne]] de 3.656 crestiáne.
+{{Comune  <!-- per la compilazione vedi Aiuto:Comune -->
+|nomeComune = Airasca
+|panorama=Airasca_sping_2009.jpg
+|linkStemma = Airasca-Stemma.png
+|siglaRegione = PMN
+|siglaProvincia = TO
+|latitudineGradi = 44
+|latitudineMinuti = 55
+|latitudineSecondi = 0
+|longitudineGradi = 7
+|longitudineMinuti = 29
+|longitudineSecondi = 0
+|altitudine = 257
+|superficie = 15,70
+|abitanti = 3.756 
+|anno = 31-08-2007
+|densita = 239
+|frazioni = Cascinette, Gabellieri, Vicendette
+|comuniLimitrofi = [[Cumiana]], [[None]], [[Piscina (TO)|Piscina]], [[Scalenghe]], [[Volvera]] 
+|cap = 10060
+|prefisso = [[011]]
+|istat = 1002
+|fiscale = A109
+|gradiGiorno = 2781
+|zonaSismica = 4
+|nomeAbitanti = airaschesi
+|patrono = [[San Bartolomeo]]
+|festivo = [[24 agosto]]
+|sito = http://www.comune.airasca.to.it/
+}}
+
+'''Airasca''' éte 'nu comune [[Italie|tagliáne]] de 3.756 crestiáne.
 
 [[Category:Comune d'u Piemonte]]
 [[Category:Comune d'a provinge de Torino]]
