*Empty MediaWiki Message*

--- a/Buttigliera_Alta.mw
+++ b/Buttigliera_Alta.mw
@@ -1,7 +1,9 @@
 {{S}}
 '''Buttigliera Alta''' éte 'nu comune [[Italie|tagliáne]] de 6.575 crestiáne.
 
-[[Category:Gëografije]]
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[de:Buttigliera Alta]]
 [[en:Buttigliera Alta]]
