*Empty MediaWiki Message*

--- a/Castagneto_Po.mw
+++ b/Castagneto_Po.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Castagneto Po''' éte 'nu comune [[Italie|tagliáne]] de 1.425 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
