*Empty MediaWiki Message*

--- a/Favria.mw
+++ b/Favria.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Favria''' éte 'nu comune [[Italie|tagliáne]] de 4.322 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
