*Empty MediaWiki Message*

--- a/Fiano_(TO).mw
+++ b/Fiano_(TO).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Fiano (TO)''' éte 'nu comune [[Italie|tagliáne]] de 2.558 crestiáne.
-[[Category:Gëografije]]
+'''Fiano''' éte 'nu comune [[Italie|tagliáne]] de 2.558 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
