*Empty MediaWiki Message*

--- a/Frossasco.mw
+++ b/Frossasco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Frossasco''' éte 'nu comune [[Italie|tagliáne]] de 2.699 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
