*Empty MediaWiki Message*

--- a/Garzigliana.mw
+++ b/Garzigliana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Garzigliana''' éte 'nu comune [[Italie|tagliáne]] de 544 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
