*Empty MediaWiki Message*

--- a/Grosso_(TO).mw
+++ b/Grosso_(TO).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Grosso (TO)''' éte 'nu comune [[Italie|tagliáne]] de 988 crestiáne.
-[[Category:Gëografije]]
+'''Grosso''' éte 'nu comune [[Italie|tagliáne]] de 988 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
