*Empty MediaWiki Message*

--- a/Ivrea.mw
+++ b/Ivrea.mw
@@ -33,6 +33,8 @@
 '''Ivrea''' éte 'nu comune [[Italie|tagliáne]] de 24.092 crestiáne.
 
 [[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[ca:Ivrea]]
 [[de:Ivrea]]
