*Empty MediaWiki Message*

--- a/Lusigliè.mw
+++ b/Lusigliè.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Lusigliè''' éte 'nu comune [[Italie|tagliáne]] de 536 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
