*Empty MediaWiki Message*

--- a/Meana_di_Susa.mw
+++ b/Meana_di_Susa.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Meana di Susa''' éte 'nu comune [[Italie|tagliáne]] de 914 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[ca:Meana di Susa]]
 [[de:Meana di Susa]]
