*Empty MediaWiki Message*

--- a/Mercenasco.mw
+++ b/Mercenasco.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mercenasco''' éte 'nu comune [[Italie|tagliáne]] de 1.186 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[de:Mercenasco]]
 [[en:Mercenasco]]
