*Empty MediaWiki Message*

--- a/Mezzenile.mw
+++ b/Mezzenile.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mezzenile''' éte 'nu comune [[Italie|tagliáne]] de 900 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[ca:Mezzenile]]
 [[de:Mezzenile]]
